[gd_scene load_steps=2 format=3 uid="uid://bpy50hmoy7l80"]

[ext_resource type="Script" uid="uid://dchl8plueo4d8" path="res://engine/ui/about_overlay.gd" id="1_6h1sh"]

[node name="AboutOverlay" type="CanvasLayer" node_paths=PackedStringArray("talkie_talkie_label", "godot_label", "about_talkie_talkie_label", "about_godot_label")]
script = ExtResource("1_6h1sh")
talkie_talkie_label = NodePath("PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/TalkieTalkieLabel")
godot_label = NodePath("PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/GodotLabel")
about_talkie_talkie_label = NodePath("PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/AboutTalkieTalkieLabel")
about_godot_label = NodePath("PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/AboutGodotLabel")

[node name="Background" type="ColorRect" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 0.921569)

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleHBox" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/TitleHBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.5
offset_right = 91.5
offset_bottom = 28.0
grow_horizontal = 2
theme_type_variation = &"LabelHeaderMain"
text = "About"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/TitleHBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_bottom = 31.0
grow_horizontal = 0
text = "[x]"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="TalkieTalkieLabel" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeader"
text = "TalkieTalkie"
horizontal_alignment = 1

[node name="AboutTalkieTalkieLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
bbcode_enabled = true
text = "This is a placeholder.
The text will be set via:
AboutOverlay.get_about_talkie_talkie_text_rich()"
fit_content = true
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GodotLabel" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeader"
text = "Godot"
horizontal_alignment = 1

[node name="AboutGodotLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "This is a placeholder.
The text will be set via:
AboutOverlay.get_about_godot_text_rich()"
fit_content = true
horizontal_alignment = 1

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/AboutTalkieTalkieLabel" to="." method="_on_meta_clicked"]
[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/AboutGodotLabel" to="." method="_on_meta_clicked"]
